--- a/www/sds_newsletter_2019.Rmd
+++ b/www/sds_newsletter_2019.Rmd
@@ -102,7 +102,11 @@ I've spent the past academic year teaching statistics, Design of Experiments and
 
 #### Albert Y. Kim
 
+Hello everyone, I've just completed my first year at Smith and I'm thrilled to be calling SDS home. It's been an eventful year, in particular attending the Women in Statistics & Data Science conference with Prof. Miles Ott and being lead organizer for Five College DataFest. I'm looking forward to year two!
+
 #### Katie Kinnaird
+
+I can't believe I've completed my first year at Smith; what a whirlwind this year has been! I got to teach four (new to me) courses in two departments, from Communicating with Data to a senior seminar in Music Information Retrieval (MIR). The students in MIR having a paper accepted through peer-review to the anniversary track at this year's International Society of Music Information Retrieval (ISMIR) Conference in the Netherlands. I am so thrilled by their paper and cannot wait to see them present in November. This year also took me overseas and around the country, attending ISMIR in Paris, the Women In Machine Learning (WiML) Workshop in Montreal, SDSS Conference in Seattle, and giving talks at the University of Louisiana at Lafayette and at the College of the Holy Cross. While this year was the beginning of my time at Smith, it also was my last year as President of the WiML Executive Board. Even though my term is over, my commitment to build more inclusive machine learning and MIR communities will continue. I'm so lucky to be part of SDS and am grateful for my amazing colleagues and students! 
 
 #### Miles Ott
 
