--- a/www/events.Rmd
+++ b/www/events.Rmd
@@ -1,70 +1,55 @@
 ---
 title: "Recent Events"
+output:
+  html_document:
+    toc: false
 ---
 
+```{r, message=FALSE, echo=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+library(tidyverse)
+speakers <- tribble(
+  ~when, ~name, ~img, ~pdf, 
+  "2019-04-18 18:00:00", "Stephanie Hicks", "stephanie_hicks_poster_500px.jpg", "stephanie_hicks_poster.pdf",
+  "2019-03-05 17:00:00", "Emma Benn", "emma_benn_poster_500px.jpg", "emma_benn_poster.pdf",
+  "2018-10-12 17:30:00", "Terry-Ann Craigie", "terryann_craigie_poster_500px.jpg", "terryann_craigie_poster.pdf",
+  "2018-03-22 17:00:00", "Rachel Schutt", "rachel_schutt_poster_500px.jpg", "rachel_schutt_poster.pdf",
+  "2016-12-06 16:30:00", "Christine Zhang '09", "christine_zhang_poster_500px.jpg", "christine_zhang_poster.pdf",
+  "2015-12-04 16:30:00", "Amanda Cox", "amanda_cox_poster_500px.png", "amanda_cox_poster.pdf",
+  
+) %>%
+  mutate(when = as.POSIXct(when), 
+         img = fs::path("gfx", img),
+         pdf = fs::path("gfx", pdf))
+
+```
+
 <div class="row">
-<div class="col-sm-6 col-md-4">
 
-  <div class="thumbnail">
-  [![](gfx/stephanie_hicks_poster_500px.jpg)](gfx/stephanie_hicks_poster.pdf)
-  <div class="caption">
+```{r, results='asis'}
+library(htmltools)
 
-### Stephanie Hicks
+thumbnail <- function(name, img, pdf, when) {
+  div(class = "col-sm-4",
+      a(class = "thumbnail", title = name, href = pdf,
+        img(src = img),
+        div(class = "caption", name, br(), format(when, "%A, %B %e, %Y"))
+      )
+  )
+}
 
-  </div>
-  </div>
+html <- speakers %>%
+  mutate(html = pmap(list(name, img, pdf, when), ~thumbnail(..1, ..2, ..3, ..4))) %>%
+  arrange(desc(when)) 
 
-  <div class="thumbnail">
-  [![](gfx/emma_benn_poster_500px.jpg)](gfx/emma_benn_poster.pdf)
-  <div class="caption">
+html %>%
+  pull(html) %>%
+  map(as.character) %>%
+  # hack to avoid further markdown rendering!!
+  # https://github.com/rstudio/rmarkdown/issues/2
+  # https://github.com/rstudio/rmarkdown/issues/326
+  gsub("\n    ", "\n", .) %>%
+  walk(cat)
+```
 
-### Emma Benn
-
-  </div>
-  </div>
-
-  
-  <div class="thumbnail">
-  [![](gfx/terryann_craigie_poster_500px.jpg)](gfx/terryann_craigie_poster.pdf)
-  <div class="caption">
-
-### Terry-Ann Craigie
-
-  </div>
-  </div>
-
-</div>
-</div>
-
-<div class="col-sm-6 col-md-4">
-
-  <div class="thumbnail">
-  [![](gfx/rachel_schutt_poster_500px.jpg)](gfx/rachel_schutt_poster.pdf)
-  <div class="caption">
-
-### Rachel Schutt
-
-  </div>
-  </div>
-
-  <div class="thumbnail">
-  [![](gfx/christine_zhang_poster_500px.jpg)](gfx/christine_zhang_poster.pdf)
-  <div class="caption">
-
-### Christine Zhang '09
-
-  </div>
-  </div>
-  
-
-  <div class="thumbnail">
-  [![](gfx/amanda_cox_poster_500px.png)](gfx/amanda_cox_poster.pdf)
-  <div class="caption">
-
-### Amanda Cox
-
-  </div>
-  </div>
-
-</div>
 </div>
