--- a/www/sds_newsletter_2018.Rmd
+++ b/www/sds_newsletter_2018.Rmd
@@ -151,7 +151,7 @@ In other news, my husband and I welcomed our identical twin boys, Owen (6lbs 14o
 - Liz Stuart '97: I guess if you're looking for things you can say that I had a blast coming back to give the The Dorothy Wrinch Lecture in Biomathematics at the [Women in Mathematics
 in New England Conference](http://www.math.smith.edu/~jhenle/wimin17/) in September 2017, and that I especially appreciated the efforts to find childcare for my 6 year old so I could attend and present! 
 
-- Maria Toeres '09: I'm currently a Senior Quantitative Researcher at The Climate Corporation, and this summer I'm mentoring my first intern! Last October I presented my work in precision agriculture at the Women in Statistics and Data Science conference in La Jolla, CA - it was great to see a lot of other Smithies there! This summer I'll be at JSM presenting some of my postdoc work in Bayesian spectral modeling for spatial processes. I'm also Treasurer for the ENVR section, so I encourage you all to attend our mixer! On a more personal note, my daughter Ottavia was born in January. Those of you attending JSM may get a chance to meet her.  
+- Maria Terres '09: I'm currently a Senior Quantitative Researcher at The Climate Corporation, and this summer I'm mentoring my first intern! Last October I presented my work in precision agriculture at the Women in Statistics and Data Science conference in La Jolla, CA - it was great to see a lot of other Smithies there! This summer I'll be at JSM presenting some of my postdoc work in Bayesian spectral modeling for spatial processes. I'm also Treasurer for the ENVR section, so I encourage you all to attend our mixer! On a more personal note, my daughter Ottavia was born in January. Those of you attending JSM may get a chance to meet her.  
 If there are any other Bay Area Smithies out there, please feel free to get in touch; a couple of us have been meeting for brunch from time to time, and it would be fun to have a bigger group!
 
 - Jingyang (Judy) Zhang '14: Happy Summer! I have been admitted by the Northwestern phd program in Statistics and will be attending this fall. 
