fixed image link

--- a/www/speaker.Rmd
+++ b/www/speaker.Rmd
@@ -4,7 +4,7 @@ title: 'Upcoming Speaker: Yeshimabeit Milner, October 21 5pm Weinstein Auditoriu
 
 # Public Lecture: Abolish Big Data
 
-[Yeshimabeit Milner](https://isgmh.northwestern.edu/files/2019/07/yeshi-headshot-chiapas-blouse-2.jpg)
+![Yeshimabeit Milner](https://isgmh.northwestern.edu/files/2019/07/yeshi-headshot-chiapas-blouse-2.jpg)
 
 ## Yeshimabeit Milner
 
